force-app/main/default/objects/AccesoriosChasis__c/AccesoriosChasis__c.object-meta.xml
<CustomObject>
    <label>Accesorio Chasis</label>
    <nameField>
        <label>Nombre de Accesorios Chasis</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accesorios Chasis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>