force-app/main/default/objects/AccesoriosChasis__c/fields/CantidadDespachada__c.field-meta.xml
<CustomField>
    <fullName>CantidadDespachada__c</fullName>
    <label>Cantidad despachada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>