force-app/main/default/objects/AccesoriosChasis__c/fields/CodigoArticulo__c.field-meta.xml
<CustomField>
    <fullName>CodigoArticulo__c</fullName>
    <label>Código de la parte</label>
    <length>32</length>
    <type>Text</type>
</CustomField>