force-app/main/default/objects/AccesoriosChasis__c/fields/Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion__c</fullName>
    <label>Descripción del accesorio</label>
    <type>TextArea</type>
</CustomField>