force-app/main/default/objects/AccesoriosChasis__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado del accesorio</label>
    <length>32</length>
    <type>Text</type>
</CustomField>